# Aerial-Image-Segmentation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: dataset.yaml  inference.yaml  model.yaml  training.yaml  validation.yaml
scripts/: download_dataset.py  predict.py  predict.sh  split_data.py  train.py  train.sh  validate.py  validate.sh
src/data/: data_loader.py  dataset.py
src/inference/: predictor.py
src/models/: model.py
src/training/: evaluator.py  trainer.py
src/utils/: config.py  metric.py  visualization.py
