[project]
name = "aerial_image_seg"
version = "0.1.0"
description = ""
authors = [{name = "benintw", email = "chen.ben968@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy (<2.0.0)", "pandas (>=2.2.3,<3.0.0)", "scikit-learn (>=1.6.1,<2.0.0)", "torch (>=2.6.0,<3.0.0)", "torchvision (>=0.21.0,<0.22.0)", "matplotlib (>=3.10.1,<4.0.0)", "tqdm (>=4.67.1,<5.0.0)", "icecream (>=2.1.4,<3.0.0)", "albumentations (>=2.0.5,<3.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
